# WebC-llvm-compiler

./: .gitignore  CMakeLists.txt  ErrHelper.cpp  ErrHelper.h  ExprAST.cpp  ExprAST.h  FileReader.cpp  FileReader.h  Global.cpp  Global.h  IFileReader.h  Lexer.cpp  Lexer.h  NodeAST.cpp  NodeAST.h  Parser.cpp  Parser.h  README.md  err_helper.cpp  err_helper.h  file_reader_wrapper.h  global.cpp  global.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  stat.cpp  stat.h  test.kl  test.sy
.github/workflows/: cmake.yml
args/: arg.hpp  arg_iface.hpp  args_parser.cpp  args_parser.h  cmd_line.hpp  context.hpp  exceptions.hpp  help.hpp  help_printer.hpp  multi_arg.hpp  utils.hpp
ast/: NodeAST.cpp  NodeAST.h  NodeAST.hpp
codegen/: CodeGen.cpp  CodeGen.h
compiler/: Compiler.cpp  Compiler.h
module/: CMakeLists.txt  README.md
module/json/: CMakeLists.txt
module/json/src/: kjson.cpp  kjson.h  kjsondemo.cpp
module/sql/: CMakeLists.txt
module/sql/src/: ksql.cpp  ksql.h  ksqldemo.cpp
module/string/: CMakeLists.txt
module/string/src/: kstring.cpp  kstring.h
module/time/: CMakeLists.txt
module/time/src/: time.c
module/web/: CMakeLists.txt
module/web/cert/: ca.crt  ca.csr  ca.key  server.crt  server.csr  server.key  server.pem
module/web/cert/demoCA/: index.txt
module/web/cert/demoCA/newcerts/: 01.pem
module/web/src/: serverdemo.cpp  web.cpp  web.hpp  webdemo.cpp
parser/: FileReader.cpp  FileReader.h  IFileReader.h  Lexer.cpp  Lexer.h  NetworkReader.cpp  NetworkReader.h  NewParser.tab.c  NewParser.tab.h  NewParser.y  Parser.cpp  Parser.h  Parser.hpp  Parser.y  StringReader.cpp  StringReader.h
pass/: RecursiveToLoopPass.cpp  RecursiveToLoopPass.h  TimeAnalysisPass.cpp  TimeAnalysisPass.h
test/: server.key  test  test.c  test.cpp  test.sy  test.webc  test1.c  test1.cpp  test1.ll
test/case/section1/functional_test/: 20_arr_sum.in
test/case/webc_test/: gcd.webc  helloserver.webc  qsort.sy  qsort.webc  sleeptest.webc  sqltest.webc  toStr.webc
ui/: widgets.cpp  widgets.h
ui/css/: main.css
ui/ui/: main.glade  main.glade~
